fix section-7  text-align
fix section-7  text-align

--- a/assets/scss/sections.scss
+++ b/assets/scss/sections.scss
@@ -61,7 +61,9 @@
   font-size: 16px;
   line-height: 1.5;
 }
-
+.section-7{
+  text-align: center;
+}
 .bg-apply {
   background-image: url(../img/image-apply.png);
 }
